FIX: Align css to reflect AA Times Phase 2 project requirements

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
       </div>
       
       <div class="masthead__technologies">
-	<span class="masthead__technologies-span">CSS</span>
-	<span class="masthead__technologies-span">HTML</span>
-	<span class="masthead__technologies-span">JavaScript</span>
-	<span class="masthead__technologies-span">Python</span>
+	<div>
+	  <span class="masthead__technologies-span">CSS</span>
+	  <span class="masthead__technologies-span">HTML</span>
+	  <span class="masthead__technologies-span">JavaScript</span>
+	  <span class="masthead__technologies-span">Python</span>
+	</div>
       </div>
       
       <div class="masthead__date">
@@ -48,6 +50,22 @@
 	<i class="far fa-newspaper"></i>Today’s Paper
       </div>
     </div>
+
+    <nav class="main">
+      <ul>
+	<li><a href="#">World</li>
+	<li><a href="">SWE Online</li>
+	<li><a href="">San Francisco</li>
+	<li><a href="">New York</li>
+	<li><a href="">Jumpstart</li>
+	<li><a href="">Online</li>
+	<li><a href="">Marketing</li>
+	<li><a href="">Sales</li>
+	<li><a href="">TelentMatch</li>
+	<li><a href="">Alumni</li>
+	<li><a href="">All</li>
+      </ul>
+    </nav>
   </header>
   <main></main>
   <footer></footer>
