FIX: Align css to reflect AA Times Phase 3 project requirements

--- a/index.html
+++ b/index.html
@@ -53,19 +53,65 @@
 
     <nav class="main">
       <ul>
-	<li><a href="#">World</li>
-	<li><a href="">SWE Online</li>
-	<li><a href="">San Francisco</li>
-	<li><a href="">New York</li>
-	<li><a href="">Jumpstart</li>
-	<li><a href="">Online</li>
-	<li><a href="">Marketing</li>
-	<li><a href="">Sales</li>
-	<li><a href="">TelentMatch</li>
-	<li><a href="">Alumni</li>
-	<li><a href="">All</li>
+	<li><a href="#">World</a></li>
+	<li><a href="">SWE Online</a></li>
+	<li><a href="">San Francisco</a></li>
+	<li><a href="">New York</a></li>
+	<li><a href="">Jumpstart</a></li>
+	<li><a href="">Online</a></li>
+	<li><a href="">Marketing</a></li>
+	<li><a href="">Sales</a></li>
+	<li><a href="">TelentMatch</a></li>
+	<li><a href="">Alumni</a></li>
+	<li><a href="">All</a></li>
       </ul>
     </nav>
+
+    <div class="interest-bar">
+	<div class="interest-bar__image">
+	<img src="./images/dog.png">
+      </div>
+      <div class="interest-bar__story-title">
+	<span class="interest-bar__headline">Dog Programmers</span>
+	<p class="interest-bar__story">Dogs are learning to code at an incredible pace</p>
+      </div>
+      <div class="interest-bar__image">
+	<img src="./images/cat.png">
+      </div>
+      <div class="interest-bar__story-title">
+	<span class="interest-bar__headline">Cats and Coding</span>
+	<p class="interest-bar__story">Cats are on the rise as the #1 example for coding demos</p>
+      </div>
+      <div class="interest-bar__image">
+	<img src="./images/plug.png">
+      </div>
+      <div class="interest-bar__story-title">
+	<span class="interest-bar__headline">Plugging stuff in</span>
+	<p class="interest-bar__story">Good or Bad? Find out now</p>
+      </div>
+      <div class="interest-bar__stock-price">
+	<div>
+	  <span>aao</span>
+	  <span>+100%</span>
+	</div>
+
+      <div>
+	  <span>swe</span>
+	  <span>+110%</span>
+      </div>
+
+      <div>
+	  <span>cat</span>
+	  <span>+111%</span>
+      </div>
+      </div>
+      <div class="interest-bar__image">
+	<img src="./images/sun-icon.png">
+      </div>
+      <div class="interest-bar__big-text">
+	77°F
+      </div>
+    </div>
   </header>
   <main></main>
   <footer></footer>
