FIX: Align css to reflect AA Times Phase 3 project requirements

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       
       <div class="masthead__paper">
-	<i class="far fa-newspaper"></i>Today’s Paper
+	<div><i class="far fa-newspaper"></i>Today’s Paper</div>
       </div>
     </div>
 
