FIX: Align css to reflect AA Times Phase 4 project requirements

--- a/index.html
+++ b/index.html
@@ -113,7 +113,106 @@
       </div>
     </div>
   </header>
-  <main></main>
+  <!-- MAIN CONTENT -->
+  <main>
+    <div class="article">
+      <article>
+	<h1>How App Academy Students Change Their Lives</h1>
+	<div>
+	  <h2>App Academy Instructors on React & Redux</h2>
+	  <p>By APP ACADEMY INSTRUCTIONAL TEAM</p>
+	  <ul>
+	    <li>
+	      It helps you write applications that behave consistently, run in different environments (client, server, and native), and are easy to test. On top of that, it provides a great developer experience, such as live code editing combined with a time traveling debugger.
+	    </li>
+	    <li>
+	      The whole state of your app is stored in an object tree inside a single store.
+	      The only way to change the state tree is to emit an action, an object describing what happened. To specify how the actions transform the state tree, you write pure reducers.
+	    </li>
+	  </ul>
+	  <p>1738 Comments</p>
+	</div>
+	<div class="iframe">
+	  <iframe src="https://player.vimeo.com/video/380193367" width="480"
+		  height="280" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+	  <p>Warning: This video will make you want to change your career</p>
+	</div>
+      </article>
+    </div>
+    
+    <div class="second">
+      <article class="article">
+	<header class="article__header">
+	  <h1 class="article__title">Where are they now?</h1>
+	  <h2 class="article__byline">
+	    By <span class="article__author">App Academy Alumni</span>
+	  </h2>
+	</header>
+	<p>
+	  First hand stories from App Academy graduates about transitioning to engineering positions at top tech companies in San Francisco.
+	</p>
+      </article>
+
+      <article class="article">
+	<header class="article__header">
+	  <h1 class="article__title">Cat Academy</h1>
+	  <h2 class="article__byline">
+	    By <span class="article__author">By APP ACADEMY DIRECTOR OF PRODUCTS</span>
+	  </h2>
+	</header>
+	<p>
+App Academy's latest product targets those interested in owning the popular feline companion by providing a curated cat care curriculum. Breakfast, Markov, Curie, Jet, and Freyja are all modern day celebrities due to their App Academy example fame.
+	</p>
+      </article>
+    </div>
+    
+    <div class="third">
+      <aside>
+	<h1>opinions</h1>
+	<span>By Breakfast the Cat</span>
+	<p>Will Javascript ever be as easy as Python?</p>
+	<p>JavaScript continues to advance with the newly released EcmaScript8 but it still doesn't quite read like Python.</p>
+	<span>299 Comments</span>
+      </aside>
+
+      <aside>
+	<span>operations</span>
+	<p>App Academy New York Has A Brand New Office</p>
+	<span>By NY OPERATIONS</span>
+	<div class="new-office"><img src="./images/new_office.jpg"></div>
+	  <p>The new space features hardwood floors and brick walls for a modern technology space with an aura for learning.</p>
+	 <span>172 Comments</span>
+      </aside>
+
+      <div class="more-news">
+	<div class="smaller-articles">
+	  <div>
+	  <span>Torvalds</span>I was almost wrong
+	  </div>
+	  <div>
+	  <span>Knuth</span>Art of programming
+	  </div>
+	  <div>
+	  <span>lovelace</span>the first algorithm
+	  </div>
+	  <div>
+	  <span>hopper</span>the first bug
+	  </div>
+	</div>
+	<div class="larger-articles">
+	  <div>
+	    <span>Thompson</span>Go c unix
+	  </div>
+	<div>
+	  <span>carmack</span>My virtual reality
+	</div>
+	<div>
+	  <span>Stallman</span>free speech not free coffee
+	</div>
+	</div>
+      </div>
+    </div>
+  </main>
   <footer></footer>
 </body>
 </html>
