FIX: Align css to reflect AA Times Phase 6 project requirements

--- a/index.html
+++ b/index.html
@@ -28,6 +28,27 @@
 	<div class="masthead__button">
 	  <i class="fas fa-cog"></i>
 	</div>
+
+	<!-- HERE -->
+	<div class="pref">
+  <div class="pref__section">
+    <div class="pref__section-header">Edition</div>
+    <ul>
+      <li class="pref__section-link"><a href="#">CSS</a></li>
+      <li class="pref__section-link"><a href="#">HTML</a></li>
+      <li class="pref__section-link"><a href="#">JavaScript</a></li>
+      <li class="pref__section-link"><a href="#">Python</a></li>
+    </ul>
+  </div>
+  <div class="pref__section">
+    <div class="pref__section-header">Help</div>
+    <ul>
+      <li class="pref__section-link"><a href="#">FAQ</a></li>
+      <li class="pref__section-link"><a href="#">Contact Us</a></li>
+    </ul>
+  </div>
+</div>
+	
       </div>
       
       <div class="masthead__technologies">
@@ -214,5 +235,8 @@ App Academy's latest product targets those interested in owning the popular feli
     </div>
   </main>
   <footer></footer>
+
+  <!-- JS -->
+  <script src="./scripts/event-handling.js"></script>
 </body>
 </html>
