FIX: Align css to reflect AA Times Phase 7 project requirements

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 	<div class="masthead__button">
 	  <i class="fa fa-search"></i>
 	</div>
+	<div class="search-modal search-modal--hidden">
+  <input type="search" class="search-modal__input" placeholder="Search">
+  <button class="search-model__go">Go</button>
+	</div>
       </div>
       <div class="masthead__actions">
 	<div class="masthead__actions-div"><button>Subscribe Now</button></div>
@@ -30,7 +34,7 @@
 	</div>
 
 	<!-- HERE -->
-	<div class="pref">
+	<div class="pref pref--hidden">
   <div class="pref__section">
     <div class="pref__section-header">Edition</div>
     <ul>
